fix: blur overlaping

--- a/src/plugins/privacyBlur/styles.css
+++ b/src/plugins/privacyBlur/styles.css
@@ -6,7 +6,6 @@
 
 body.vc-private-blur-username [id^="message-username-"],
 body.vc-private-blur-username [class*="username_"],
-body.vc-private-blur-username [class*="headerText-"],
 body.vc-private-blur-username [class*="headerText_"] {
     filter: blur(var(--vc-private-blur-amount));
     transition: filter var(--vc-private-blur-transition) ease;
@@ -14,8 +13,19 @@ body.vc-private-blur-username [class*="headerText_"] {
 
 body.vc-private-blur-username [id^="message-username-"]:hover,
 body.vc-private-blur-username [class*="username_"]:hover,
-body.vc-private-blur-username [class*="headerText-"]:hover,
 body.vc-private-blur-username [class*="headerText_"]:hover {
+    filter: blur(var(--vc-private-blur-none));
+}
+
+body.vc-private-blur-channel.vc-private-blur-username [id^="message-username-"],
+body.vc-private-blur-channel.vc-private-blur-username [class*="username_"],
+body.vc-private-blur-channel.vc-private-blur-username [class*="headerText_"] {
+    filter: blur(var(--vc-private-blur-none));
+}
+
+body.vc-private-blur-text.vc-private-blur-username [data-privacy-blur-message="true"] [id^="message-username-"],
+body.vc-private-blur-text.vc-private-blur-username [data-privacy-blur-message="true"] [class*="username_"],
+body.vc-private-blur-text.vc-private-blur-username [data-privacy-blur-message="true"] [class*="headerText_"] {
     filter: blur(var(--vc-private-blur-none));
 }
 
@@ -26,6 +36,10 @@ body.vc-private-blur-text [data-privacy-blur-message="true"] {
 }
 
 body.vc-private-blur-text [data-privacy-blur-message="true"]:hover {
+    filter: blur(var(--vc-private-blur-none));
+}
+
+body.vc-private-blur-text [data-privacy-blur-message="true"].privacy-blur-group-hover {
     filter: blur(var(--vc-private-blur-none));
 }
 
@@ -53,10 +67,27 @@ body.vc-private-blur-channel li[class*="channel_"][class*="dm_"][class*="contain
     transition: filter var(--vc-private-blur-transition) ease;
 }
 
+body.vc-private-blur-channel li[class*="channel_"][class*="dm_"][class*="container_"] * {
+    filter: blur(var(--vc-private-blur-none));
+}
+
 body.vc-private-blur-channel li[class*="channel_"][class*="dm_"][class*="container_"]:hover {
     filter: blur(var(--vc-private-blur-none));
 }
 
+
+body.vc-private-blur-channel ul[class*="content_"] li[class*="channel_"][class*="container_"]:not([class*="dm_"]) {
+    filter: blur(var(--vc-private-blur-none));
+}
+
+body.vc-private-blur-channel ul[class*="content_"] li[class*="channel_"][class*="container_"]:not([class*="dm_"]) * {
+    filter: blur(var(--vc-private-blur-none));
+}
+
+body.vc-private-blur-channel ul[class*="content_"] [class*="channel_"][class*="container_"] div[class*="layout_"][class*="avatarWithText_"],
+body.vc-private-blur-channel ul[class*="content_"] span[class*="headerText_"] {
+    filter: blur(var(--vc-private-blur-none));
+}
 
 body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] div[class*="member_"][class*="container_"] {
     filter: blur(var(--vc-private-blur-amount));
@@ -65,11 +96,10 @@ body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] 
 
 body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] div[class*="member_"][class*="container_"] [class*="username_"],
 body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] div[class*="member_"][class*="container_"] [class*="name_"] {
-    filter: none;
+    filter: blur(var(--vc-private-blur-none));
 }
 
 body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] div[class*="member_"][class*="container_"]:hover,
 body.vc-private-blur-channel aside[class*="membersWrap"] div[class*="members_"] div[class*="member_"][class*="container_"]:hover * {
     filter: blur(var(--vc-private-blur-none));
-
 }
